# oak-explorer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/reference/: oak-reference.html  oak-stage1.html  oak-stage2.html
docs/superpowers/plans/: 2026-03-29-oak-explorer-stage2-camera-streams.md
docs/superpowers/specs/: 2026-03-29-oak-explorer-stage2-camera-streams.md  2026-03-30-oak-explorer-stage3-depth-stereo-design.md
src/: main.cpp
src/oak/: CameraStream.cpp  CameraStream.h  Device.cpp  Device.h
src/ui/: Sidebar.cpp  Sidebar.h  StreamView.cpp  StreamView.h
